WIP Hazard detection

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 PD3_cache/work/
 PD3_cache/
+PD4_pp/_final/vsim.wlf
+PD4_pp/_final/wlftr2daxc
+PD4_pp/_final/wlftsfwa4m
+PD4_pp/_final/wlftz1cyme
+PD4_pp/_final/work/
