Prepare for merge

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 PD3_cache/work/
 PD3_cache/
+PD4_pp/_final/work/_lib1_179.qdb
+PD4_pp/_final/work/_lib1_179.qpg
+PD4_pp/_final/work/_lib1_179.qtl
+PD4_pp/_final/work/_lib1_47.qdb
+PD4_pp/_final/work/_lib1_47.qpg
+PD4_pp/_final/work/_lib1_47.qtl
